Fixes Spacing Conflicts with Caption Sizing Props (#925)
* Fixes Spacing Conflicts

* Added Changelog Entry

--- a/app/pb_kits/playbook/pb_caption/_caption.scss
+++ b/app/pb_kits/playbook/pb_caption/_caption.scss
@@ -3,11 +3,11 @@
 [class^=pb_caption_kit] {
   @include caption;
 
-  &[class*=_lg] {
+  &[class^=pb_caption_kit_lg] {
     @include caption_lg;
   }
 
-  &[class*=_xs] {
+  &[class^=pb_caption_kit_xs] {
     @include caption_xs;
   }
 
